test/vm/errors/compiler/did_you_mean_no_match.ach
// Compiler error: undefined variable with no similar name in scope
// Expected: plain "undefined variable" error, no suggestion

let alpha = 1
let result = zzzzz
